# automatic-broccoli

./: .editorconfig  .gitignore  Makefile  README.md
.github/workflows/: app-cd.yml  app-ci.yml  deploy.yml  destroy.yml  terraform-deploy.yml  terraform-plan.yml
app/: .dockerignore  .flake8  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
app/src/: __init__.py  app.py  config.py
app/src/middleware/: logging.py  metrics.py
app/src/routes/: api.py  health.py
app/tests/: conftest.py
app/tests/unit/: test_health.py
docs/: CD-PIPELINE-STRATEGY.md  ENVIRONMENT-COMPARISON.md  README.md  client-questionnaire.docx  pr-flow.md
terraform/environments/common/: main.tf  outputs.tf  variables.tf
terraform/environments/dev/: main.tf  terraform.tfvars.example  variables.tf
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  variables.tf
terraform/modules/ecs-cluster/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs-service/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/observability/: dashboard.json  main.tf  outputs.tf  variables.tf
terraform/modules/oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/tf-state/: main.tf  variables.tf
terraform/policies/: README.md
terraform/policies/checkov/: .checkov.yaml
(+2 files in other folders)
